Fix typo + Add Car Name